--- a/ai-podcast-clipper-frontend/package.json
+++ b/ai-podcast-clipper-frontend/package.json
@@ -7,6 +7,7 @@
     "dev": "next dev --turbo",
     "db:studio": "prisma studio",
     "db:push": "prisma db push",
+    "inngest-dev": "npx inngest-cli@latest dev",
     "build": "next build",
     "check": "next lint && tsc --noEmit",
     "db:generate": "prisma migrate dev",
@@ -24,6 +25,7 @@
     "@auth/prisma-adapter": "^2.7.2",
     "@prisma/client": "^6.5.0",
     "@t3-oss/env-nextjs": "^0.12.0",
+    "inngest": "^3.39.2",
     "next": "^15.2.3",
     "next-auth": "5.0.0-beta.25",
     "react": "^19.0.0",
