--- a/ai-podcast-clipper-frontend/package.json
+++ b/ai-podcast-clipper-frontend/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "ai-podcast-clipper-frontend",
+  "name": "t3demo",
   "version": "0.1.0",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev --turbo",
-    "db:studio": "prisma studio",
-    "db:push": "prisma db push",
-    "inngest-dev": "npx inngest-cli@latest dev",
     "build": "next build",
     "check": "next lint && tsc --noEmit",
     "db:generate": "prisma migrate dev",
     "db:migrate": "prisma migrate deploy",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio",
+    "dev": "next dev --turbo",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "postinstall": "prisma generate",
@@ -23,33 +22,33 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
+    "@prisma/client": "^6.5.0",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@t3-oss/env-nextjs": "^0.12.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.525.0",
+    "next": "^15.2.3",
+    "next-auth": "5.0.0-beta.25",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^3.24.2",
     "@aws-sdk/client-s3": "^3.832.0",
     "@aws-sdk/s3-request-presigner": "^3.837.0",
     "@hookform/resolvers": "^5.1.1",
-    "@prisma/client": "^6.5.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
-    "@t3-oss/env-nextjs": "^0.12.0",
     "bcryptjs": "^3.0.2",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
     "inngest": "^3.39.2",
-    "lucide-react": "^0.522.0",
-    "next": "^15.2.3",
-    "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
     "shadcn-dropzone": "^0.2.1",
     "sonner": "^2.0.5",
     "stripe": "^18.2.1",
-    "tailwind-merge": "^3.3.1",
-    "uuid": "^11.1.0",
-    "zod": "^3.24.2"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
